// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBabelPlugin returns a function that adds a plugin to the plugins list 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "plugins": Array [
                "@babel/plugin-transform-runtime",
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`addBabelPlugins returns functions that add plugins to the plugins list 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "plugins": Array [
                Array [
                  "@babel/plugin-proposal-object-rest-spread",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/plugin-transform-runtime",
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`addBabelPreset returns a function that adds a preset to the presets list 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "plugins": Array [],
              "presets": Array [
                "@babel/env",
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`addBabelPresets returns functions that add presets to the presets list 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "plugins": Array [],
              "presets": Array [
                Array [
                  "@babel/env",
                  Object {
                    "loose": true,
                  },
                ],
                "@babel/typescript",
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`addDecoratorsLegacy returns a function that adds the decorators plugin to the plugins list 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "plugins": Array [
                Array [
                  "@babel/plugin-proposal-decorators",
                  Object {
                    "legacy": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`babelInclude sets the babel loader include 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "include": Array [
              "src",
            ],
            "loader": "babel",
            "options": Object {
              "plugins": Array [],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`fixBabelImports adds the babel imports plugin for the provided library 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "plugins": Array [
                Array [
                  "import",
                  Object {
                    "libraryDirectory": "",
                    "libraryName": "lodash",
                  },
                  "fix-lodash-imports",
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`useBabelRc enables the babel loader's babelrc flag 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "loader": "babel",
            "options": Object {
              "babelrc": true,
              "plugins": Array [],
            },
          },
        ],
      },
    ],
  },
}
`;
